--- a/app/src/main/res/layout/activity_bahasa.xml
+++ b/app/src/main/res/layout/activity_bahasa.xml
@@ -167,7 +167,7 @@
                             android:background="@drawable/bt_white_round">
                             <TextView
                                 android:id="@+id/list_bahasa"
-                                android:layout_width="match_parent"
+                                android:layout_width="wrap_content"
                                 android:layout_height="wrap_content"
                                 android:text="Bahasa Indonesia, "
                                 android:layout_margin="8dp"
