--- a/app/src/main/res/layout/activity_tambah_ak1.xml
+++ b/app/src/main/res/layout/activity_tambah_ak1.xml
@@ -633,22 +633,45 @@
             android:layout_alignParentBottom="true"
             android:layout_marginVertical="15dp"
             android:gravity="center">
-            <LinearLayout
-                android:id="@+id/btn_kartu_ak1"
-                android:layout_width="match_parent"
-                android:layout_height="56dp"
-                android:layout_marginHorizontal="16dp"
-                android:background="@drawable/bt_red_round"
-                android:gravity="center">
 
-                <TextView
-                    android:layout_width="wrap_content"
-                    android:layout_height="wrap_content"
-                    android:text="Buat Kartu AK1"
-                    android:textAllCaps="false"
-                    android:textColor="#FFF"
-                    android:textStyle="bold"></TextView>
+            <LinearLayout
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"
+                android:layout_marginHorizontal="16dp"
+                android:weightSum="10">
+                <LinearLayout
+                    android:id="@+id/btn_refresh"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="3"
+                    android:background="@drawable/bt_primary_round"
+                    android:layout_marginRight="8dp"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Refresh"
+                        android:textAllCaps="false"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"/>
+                </LinearLayout>
+                <LinearLayout
+                    android:id="@+id/btn_kartu_ak1"
+                    android:layout_width="0dp"
+                    android:layout_height="56dp"
+                    android:layout_weight="7"
+                    android:background="@drawable/bt_red_round"
+                    android:gravity="center">
+                    <TextView
+                        android:layout_width="wrap_content"
+                        android:layout_height="wrap_content"
+                        android:text="Ajukan Kartu AK1 Baru"
+                        android:textAllCaps="false"
+                        android:textColor="#FFF"
+                        android:textStyle="bold"/>
+                </LinearLayout>
             </LinearLayout>
+
         </RelativeLayout>
 
     </LinearLayout>
